2001-08-14  Jakub Jelinek  <jakub@redhat.com>

	* resolv/nss_dns/dns-host.c (RESOLVSORT): Define.
	(addrsort): New function.
	* resolv/gethnamaddr.c (RESOLVSORT): Define.

2001-08-14  Jakub Jelinek  <jakub@redhat.com>

	* string/strsignal.c (free_mem): Remove.

2001-08-14  Andreas Jaeger  <aj@suse.de>

	* inet/inet_ntoa.c (free_mem): Remove, it's not used anymore.
	Closes PR libc/2477, reported by Dylan Alex Simon
	<dylan@dylex.caltech.edu>.

2001-08-14  Ulrich Drepper  <drepper@redhat.com>

	* locale/Makefile (aux): Add xlocale.
	* locale/xlocale.c: New file.
	* include/locale.c (_nl_C_locobj): Declare.
	* iconv/gconv_charset.h: Use __tolower_l, __isdigit_l, __isspace_l
	with _nl_C_locobj instead of tolower, isdigit, isspace.
	* iconv/gconv_conf.c: Likewise.
	* iconv/gconv_int.h: Likewise.
	* iconv/gconv_open.c: Likewise.

	* locale/newlocale.c: Minor cleanups.

2001-08-14  Andreas Jaeger  <aj@suse.de>

	* sysdeps/ieee754/ldbl-128/w_expl.c: New file, copy from
	ldbl-96/w_expl.c with tweaked constants.  Patch by Stephen L
	Moshier.

2001-08-13  Ulrich Drepper  <drepper@redhat.com>

	* malloc/memusage.c (me): Allow creating the output file.

	* sysdeps/unix/sysv/linux/Makefile: Remove -fkeep-inline-functions
	flag for init-first.

	* po/fr.po: Update from translation team.

2001-08-13  Andreas Jaeger  <aj@suse.de>

	* sysdeps/mips/machine-gmon.h (MCOUNT): Don't use delay slot for
	jal since it's a macro.
	Patch by Simon Gee <simong@oz.agile.tv>.

2001-08-12  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/Makefile: Add rules to build ISO-IR-209 and MAC-SAMI.
	* iconvdata/iso-ir-209.c: New file.
	* iconvdata/mac-sami.c: New file.
	* iconvdata/gconv-modules: Add entries for ISO-IR-209 and MAC-SAMI.
	* iconvdata/tst-tables.sh: Likewise.

	* posix/getopt.c: Remove store_args_and_env which is not needed since
	USE_NONOPTION_FLAGS is undefined anyhow.  Use __libc_argc and
	__libc_argv variables.

2001-08-12  Roland McGrath  <roland@frob.com>
